# rust-docker-boilerplate

./: .gitignore  docker-compose.yaml
build-scripts/: build-and-deploy.sh
db/: schema.sql
services/ov-api/: Cargo.toml  Dockerfile
services/ov-api/src/: main.rs
services/ov-api/src/classes/: login.rs
services/ov-web/: Dockerfile  Dockerfile-builder  README.md  default.conf  package.json  webpack.config.js
services/ov-web/src/: app.css  app.js
services/ov-web/src/components/LoginForm/: LoginForm.css  LoginForm.js
services/ov-web/src/pages/DashboardPage/: DashboardPage.js
services/ov-web/src/pages/LoginPage/: LoginPage.css  LoginPage.js
services/ov-web/src/pages/MainPage/: MainPage.js
services/ov-web/webroot/: index.html
